kanban-board/src/app/board/board-desktop/board-desktop.component.scss
.overall-container{
    width: 100vw;
    background-color: rgb(247, 247, 247);
    height: 100%;
    .add-stage-container{
      display: flex;
      justify-content: flex-end;
      padding: 5px 20px;
      position:sticky;
      background-color: rgb(247, 247, 247);
      top:0;
      .add-stage-button{
        background-color: rgb(75, 163, 79);
        color: #ffffff;
      
      }
    }

    .card-container {
      min-width: 10px;
      max-width: 100%;
      flex-grow:1;
      flex-basis: 0;
      vertical-align: top;
      position: relative;
      &:first-child{
          .breadcrumb{
            .breadcrumb-wrapper{
            position: sticky;
            top: 46px;
            .head-text, .subtext{
              padding-left: 25px;
            }
          }
        }
        
      }
      
        .breadcrumb{
          position: sticky;
          top: 46px;
          // z-index: 2;
          .breadcrumb-wrapper{
            
            .head-text{
              font-weight: bold;
              padding-left:30px;
              overflow: hidden;
              text-overflow: ellipsis;
              white-space: nowrap;
              text-transform: capitalize;
            }
            .subtext{
              font-size:12px;
              color:rgb(124, 121, 121);
              margin-top: 6px;
              padding-left: 30px;
              overflow: hidden;
              text-overflow: ellipsis;
              white-space: nowrap;
              text-transform: capitalize;
              .dot{
                margin: 0 5px;
              }
            }
          }
          
        }
        .card-list{
          .card-box{
            .subtext{
              font-size:12px;
              color:rgb(124, 121, 121);
              display: inline-block;
              margin-top: 6px;
              text-transform: capitalize;
              word-break: break-word;
            }
          }
        }
      
    }

  }
  .card-headings{
      display: flex;
      width: 100%;
      .heading{
        margin: 0 25px 25px 0;
      }
  }
  .list-container{
    display: flex;
    width: 100%;
  }
  
  
  .card-list {
    border: solid 1px rgb(247, 247, 247);
    min-height: 60px;
    border-radius: 4px;
    overflow: hidden;
    display: block;
    margin: 6px;
    margin-left: 8px;
    height: calc(100% - 75px);
    .cdk-drag-placeholder{
      opacity: 0;
    }
   
    &.cdk-drop-list-dragging{
      background-color: #DCDCDC;
      border: 2px dashed #696969;
      .card-box.cdk-drag-placeholder{
        display: none;
      }
      .add-deal .add-icon{
        opacity: 0;
      }
      
    }
  }
  
  .card-box {
    padding: 20px 10px;
    color: rgba(0, 0, 0, 0.87);
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    box-sizing: border-box;
    cursor: pointer;
    background: white;
    margin-bottom: 4px;
    font-size: 14px;
    box-shadow: 0 0 1px 1px rgba(0,0,0,.05), 0 1px 2px -2px rgba(0,0,0,.06), 0 1px 3px 0 rgba(0,0,0,.07);
  }
  
  .cdk-drag-preview {
    box-sizing: border-box;
    border-radius: 4px;
    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
                0 8px 10px 1px rgba(0, 0, 0, 0.14),
                0 3px 14px 2px rgba(0, 0, 0, 0.12);
                .head-text{
                  font-weight: bold;
                  text-transform: capitalize;
                  word-break: break-word;
                }
                .subtext{
                  font-size:12px;
                  color:rgb(124, 121, 121);
                  display: inline-block;
                  margin-top: 6px;
                  text-transform: capitalize;
                  word-break: break-word;
                }
  }
  
  .cdk-drag-placeholder {
    opacity: 0;
  }
  
  .cdk-drag-animating {
    // transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
  }
  
  .card-box:last-child {
   
  }
  
  .card-list.cdk-drop-list-dragging .card-box:not(.cdk-drag-placeholder) {
    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
  }
  
  body {
    background: rgb(247, 247, 247);
    // padding: 30px;
  }
  
  .breadcrumb-wrap {
    font-family: sans-serif;
    font-size: 14px;
    font-weight: bold;
    color: #1c1d1f;
  }
  
  .breadcrumb-title {
    font-size: 22px;
    padding: 10px 20px;
  }
  
  .breadcrumb {
    padding: 0;
    margin: 0;
    width: 100%;
  }

  .breadcrumb div.breadcrumb-wrapper {
  width:100%;
  border-top:1px solid #d7dade;
  border-bottom:1px solid #d7dade;
}


.breadcrumb div a {
  color: #1c1d1f;
  text-decoration: none;
  padding: 10px 0px;
  background: #ffffff;
  position: absolute;
  display: block;
  width: 100%;
  white-space: nowrap;
}
.list-container .card-container:first-child .breadcrumb a{
  // margin-left:24px;
}

.card-container:not(:last-child) .breadcrumb div a:after {
  content: "";
  display: block;
  width: 0;
  height: 0;
  border-top: 30px solid transparent;
  border-bottom: 30px solid transparent;
  border-left: 10px solid #f7f7f7;
  position: absolute;
  top: 85%;
  margin-top: -50px;
  left: 100%;
  z-index: 2;
}

.card-container:not(:last-child) .breadcrumb div a:before {
  content: "";
  display: block;
  width: 0;
  height: 0;
  border-top: 30px solid transparent;
  border-bottom: 30px solid transparent;
  border-left: 10px solid #d7dade;
  position: absolute;
  top: 85%;
  margin-top: -50px;
  margin-left: 2px;
  left: 100%;
  z-index: 1;
}

.breadcrumb div:last-child a {
  background: rgb(247, 247, 247);
  color: #1c1d1f;
  cursor: default;
  position:relative;
  // width:100%;
}

.breadcrumb div:last-child a:after {
  border-left-color: rgb(247, 247, 247);
}


.smaller-subtext{
  font-size: 12px;
  color:rgb(124, 121, 121);
  display: flex;
  align-items: center;
  .person-icon{
    font-size: 20px;
    height: 12px
  }
  .amount{
    margin-top: 7px;
  }
}


.card-box .head-text{
  font-weight: bold;
  text-transform: capitalize;
  word-break: break-word;
}

.add-deal{
  .add-icon{
    opacity:0;
    font-size:35px;
    display:flex;
    justify-content: center;
    &:hover{
      background-color:rgb(228, 224, 224);
    }
  }
}
.card-list:hover .add-icon{
  opacity:1;
  
  cursor: pointer;
}
.maintext-tooltip{
  background-color: #000000;
  font-size:12px;
  text-transform: capitalize;
  opacity: 0.8;
}
.subtext-tooltip{
  background-color: #000000;
  color: #ffffff;
  opacity: 0.8;
  position: absolute;
  left: 35%;
  top: 50px;
  padding: 5px;
  border-radius: 5px;
  font-size:12px;
  min-width: 110px;
  .total{
    font-weight: 600;
  }
  .subtext{
    font-size:12px;
    margin-top: 4px;
    .dot{
      margin: 0 5px;
    }
  }
}

